feat: Improve performance